change I915 DRM to kernel module and add CONFIG_DRM_AMDGPU to support also AMD-based GPUs.

--- a/buildroot-external/board/generic-x86_64/kernel.config
+++ b/buildroot-external/board/generic-x86_64/kernel.config
@@ -22,10 +22,13 @@ CONFIG_FB_EFI=y
 # disable simple framebuffer support
 # CONFIG_FB_SIMPLE is not set
 
-CONFIG_DRM_I915=y
+CONFIG_DRM_I915=m
 CONFIG_DRM_I915_CAPTURE_ERROR=y
 CONFIG_DRM_I915_COMPRESS_ERROR=y
 CONFIG_DRM_I915_USERPTR=y
+CONFIG_DRM_AMDGPU=m
+CONFIG_DRM_AMDGPU_SI=y
+CONFIG_DRM_AMDGPU_CIK=y
 
 CONFIG_MMC=y
 CONFIG_MMC_BLOCK=y
