--- a/buildroot-external/Buildroot.config
+++ b/buildroot-external/Buildroot.config
@@ -58,7 +58,7 @@ BR2_PACKAGE_MESA3D_OPENGL_GLX=y
 BR2_PACKAGE_MESA3D_OPENGL_EGL=y
 BR2_PACKAGE_MESA3D_OPENGL_ES=y
 BR2_PACKAGE_PSPLASH=y
-BR2_PACKAGE_PSPLASH_PATCH="$(BR2_EXTERNAL_THINROOT_PATH)/patches/psplash/hzdr"
+BR2_PACKAGE_PSPLASH_IMAGE="$(BR2_EXTERNAL_THINROOT_PATH)/patches/psplash/logo-hzdr.png"
 BR2_PACKAGE_XORG7=y
 BR2_PACKAGE_XSERVER_XORG_SERVER=y
 BR2_PACKAGE_XLIB_LIBXAW=y
