add BR2_PACKAGE_GSETTINGS_DESKTOP_SCHEMAS package to add missing gsettings-desktop schemas for newer applications (google-chrome) to be able to use these schemas (e.g. not crash).

--- a/buildroot-external/Buildroot.config
+++ b/buildroot-external/Buildroot.config
@@ -57,6 +57,7 @@ BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_SWRAST=y
 BR2_PACKAGE_MESA3D_OPENGL_GLX=y
 BR2_PACKAGE_MESA3D_OPENGL_EGL=y
 BR2_PACKAGE_MESA3D_OPENGL_ES=y
+BR2_PACKAGE_GSETTINGS_DESKTOP_SCHEMAS=y
 BR2_PACKAGE_PSPLASH=y
 BR2_PACKAGE_PSPLASH_IMAGE="$(BR2_EXTERNAL_THINROOT_PATH)/patches/psplash/logo-hzdr.png"
 BR2_PACKAGE_XORG7=y
