use pactl rather than amixer for the volume controls which seems to be more reliable. In addition we allow to switch microphone levels and mute/unmute toggle via SHIFT+keypad presses as well now.

--- a/buildroot-external/rootfs-overlay/etc/hotkeyd.conf
+++ b/buildroot-external/rootfs-overlay/etc/hotkeyd.conf
@@ -29,12 +29,18 @@ CUT /bin/su - truser -c "DISPLAY=:0.0 /bin/xdotool keydown Shift_L key Delete 'k
 UNDO /bin/su - truser -c "DISPLAY=:0.0 /bin/xdotool keydown Control_L key z keyup Control_L" &
 
 # audo control hotkeys
-VOLUMEUP /bin/su - truser -c "/usr/bin/amixer sset Master 5%+" &
-VOLUMEDOWN /bin/su - truser -c "/usr/bin/amixer sset Master 5%-" &
-MUTE /bin/su - truser -c "/usr/bin/amixer sset Master toggle" &
-LEFTALT+KPPLUS /bin/su - truser -c "/usr/bin/amixer sset Master 5%+" &
-RIGHTALT+KPPLUS /bin/su - truser -c "/usr/bin/amixer sset Master 5%+" &
-LEFTALT+KPMINUS /bin/su - truser -c "/usr/bin/amixer sset Master 5%-" &
-RIGHTALT+KPMINUS /bin/su - truser -c "/usr/bin/amixer sset Master 5%-" &
-LEFTALT+KPASTERISK /bin/su - truser -c "/usr/bin/amixer sset Master toggle" &
-RIGHTALT+KPASTERISK /bin/su - truser -c "/usr/bin/amixer sset Master toggle" &
+VOLUMEUP /bin/su - truser -c "/usr/bin/pactl set-sink-volume @DEFAULT_SINK@ +5%" &
+VOLUMEDOWN /bin/su - truser -c "/usr/bin/pactl set-sink-volume @DEFAULT_SINK@ -5%" &
+MUTE /bin/su - truser -c "/usr/bin/pactl set-sink-mute @DEFAULT_SINK@ toggle" &
+LEFTALT+KPPLUS /bin/su - truser -c "/usr/bin/pactl set-sink-volume @DEFAULT_SINK@ +5%" &
+RIGHTALT+KPPLUS /bin/su - truser -c "/usr/bin/pactl set-sink-volume @DEFAULT_SINK@ +5%" &
+LEFTALT+KPMINUS /bin/su - truser -c "/usr/bin/pactl set-sink-volume @DEFAULT_SINK@ -5%" &
+RIGHTALT+KPMINUS /bin/su - truser -c "/usr/bin/pactl set-sink-volume @DEFAULT_SINK@ -5%" &
+LEFTALT+KPASTERISK /bin/su - truser -c "/usr/bin/pactl set-sink-mute @DEFAULT_SINK@ toggle" &
+RIGHTALT+KPASTERISK /bin/su - truser -c "/usr/bin/pactl set-sink-mute @DEFAULT_SINK@ toggle" &
+LEFTSHIFT+KPPLUS /bin/su - truser -c "/usr/bin/pactl set-source-volume @DEFAULT_SOURCE@ +5%" &
+RIGHTSHIFT+KPPLUS /bin/su - truser -c "/usr/bin/pactl set-source-volume @DEFAULT_SOURCE@ +5%" &
+LEFTSHIFT+KPMINUS /bin/su - truser -c "/usr/bin/pactl set-source-volume @DEFAULT_SOURCE@ -5%" &
+RIGHTSHIFT+KPMINUS /bin/su - truser -c "/usr/bin/pactl set-source-volume @DEFAULT_SOURCE@ -5%" &
+LEFTSHIFT+KPASTERISK /bin/su - truser -c "/usr/bin/pactl set-source-mute @DEFAULT_SOURCE@ toggle" &
+RIGHTSHIFT+KPASTERISK /bin/su - truser -c "/usr/bin/pactl set-source-mute @DEFAULT_SOURCE@ toggle" &
