add MICMUTE keyboard hotkey to mute/unmute the default audio input source.

--- a/buildroot-external/rootfs-overlay/etc/hotkeyd.conf
+++ b/buildroot-external/rootfs-overlay/etc/hotkeyd.conf
@@ -32,6 +32,7 @@ UNDO /bin/su - truser -c "DISPLAY=:0.0 /bin/xdotool keydown Control_L key z keyu
 VOLUMEUP /bin/su - truser -c "/usr/bin/pactl set-sink-volume @DEFAULT_SINK@ +5%" &
 VOLUMEDOWN /bin/su - truser -c "/usr/bin/pactl set-sink-volume @DEFAULT_SINK@ -5%" &
 MUTE /bin/su - truser -c "/usr/bin/pactl set-sink-mute @DEFAULT_SINK@ toggle" &
+MICMUTE /bin/su - truser -c "/usr/bin/pactl set-source-mute @DEFAULT_SOURCE@ toggle" &
 LEFTALT+KPPLUS /bin/su - truser -c "/usr/bin/pactl set-sink-volume @DEFAULT_SINK@ +5%" &
 RIGHTALT+KPPLUS /bin/su - truser -c "/usr/bin/pactl set-sink-volume @DEFAULT_SINK@ +5%" &
 LEFTALT+KPMINUS /bin/su - truser -c "/usr/bin/pactl set-sink-volume @DEFAULT_SINK@ -5%" &
