--- a/buildroot-external/Config.in
+++ b/buildroot-external/Config.in
@@ -16,4 +16,5 @@ menu "Additional software"
   source "$BR2_EXTERNAL_THINROOT_PATH/package/qt-kiosk-browser/Config.in"
   source "$BR2_EXTERNAL_THINROOT_PATH/package/multilib32/Config.in"
   source "$BR2_EXTERNAL_THINROOT_PATH/package/yoe-kiosk-browser/Config.in"
+  source "$BR2_EXTERNAL_THINROOT_PATH/package/xosd/Config.in"
 endmenu
