--- a/buildroot-external/package/multilib32/Config.in
+++ b/buildroot-external/package/multilib32/Config.in
@@ -1,5 +1,10 @@
 config BR2_PACKAGE_MULTILIB32
-	bool "On a 64bit systems this package allows recompile the used toolchain for 32bit systems and stores the created libraries to /lib32,/usr/lib32 accordingly"
+	bool "multilib32"
+	help
+	  On 64bit systems this virtual package allows compile the used
+	  toolchain for 32bit systems and stores the created libraries
+	  to /lib32,/usr/lib32 accordingly so that a multlib env is
+	  available for execution of 64+32bit binaries.
 
 config BR2_PACKAGE_MULTILIB32_CONFIG_FRAGMENT_FILE
 	string "kconfig fragment file"
