better xosd description

--- a/buildroot-external/package/xosd/Config.in
+++ b/buildroot-external/package/xosd/Config.in
@@ -1,6 +1,9 @@
 config BR2_PACKAGE_XOSD
 	bool "xosd"
 	help
-	  XOSD
+	  XOSD displays text on your screen, sounds simple right?
+	  The difference is it is unmanaged and shaped, so it appears
+	  transparent. This gives the effect of an On Screen Display,
+	  like your TV/VCR etc.
 
 	  https://sourceforge.net/projects/libxosd/
