--- a/buildroot-external/rootfs-overlay/etc/hotkeyd.conf
+++ b/buildroot-external/rootfs-overlay/etc/hotkeyd.conf
@@ -29,19 +29,19 @@ CUT /bin/su - truser -c "DISPLAY=:0.0 /bin/xdotool keydown Shift_L key Delete 'k
 UNDO /bin/su - truser -c "DISPLAY=:0.0 /bin/xdotool keydown Control_L key z keyup Control_L" &
 
 # audo control hotkeys
-VOLUMEUP /bin/su - truser -c "/usr/bin/pactl set-sink-volume @DEFAULT_SINK@ +5%" &
-VOLUMEDOWN /bin/su - truser -c "/usr/bin/pactl set-sink-volume @DEFAULT_SINK@ -5%" &
-MUTE /bin/su - truser -c "/usr/bin/pactl set-sink-mute @DEFAULT_SINK@ toggle" &
-MICMUTE /bin/su - truser -c "/usr/bin/pactl set-source-mute @DEFAULT_SOURCE@ toggle" &
-LEFTALT+KPPLUS /bin/su - truser -c "/usr/bin/pactl set-sink-volume @DEFAULT_SINK@ +5%" &
-RIGHTALT+KPPLUS /bin/su - truser -c "/usr/bin/pactl set-sink-volume @DEFAULT_SINK@ +5%" &
-LEFTALT+KPMINUS /bin/su - truser -c "/usr/bin/pactl set-sink-volume @DEFAULT_SINK@ -5%" &
-RIGHTALT+KPMINUS /bin/su - truser -c "/usr/bin/pactl set-sink-volume @DEFAULT_SINK@ -5%" &
-LEFTALT+KPASTERISK /bin/su - truser -c "/usr/bin/pactl set-sink-mute @DEFAULT_SINK@ toggle" &
-RIGHTALT+KPASTERISK /bin/su - truser -c "/usr/bin/pactl set-sink-mute @DEFAULT_SINK@ toggle" &
-LEFTSHIFT+KPPLUS /bin/su - truser -c "/usr/bin/pactl set-source-volume @DEFAULT_SOURCE@ +5%" &
-RIGHTSHIFT+KPPLUS /bin/su - truser -c "/usr/bin/pactl set-source-volume @DEFAULT_SOURCE@ +5%" &
-LEFTSHIFT+KPMINUS /bin/su - truser -c "/usr/bin/pactl set-source-volume @DEFAULT_SOURCE@ -5%" &
-RIGHTSHIFT+KPMINUS /bin/su - truser -c "/usr/bin/pactl set-source-volume @DEFAULT_SOURCE@ -5%" &
-LEFTSHIFT+KPASTERISK /bin/su - truser -c "/usr/bin/pactl set-source-mute @DEFAULT_SOURCE@ toggle" &
-RIGHTSHIFT+KPASTERISK /bin/su - truser -c "/usr/bin/pactl set-source-mute @DEFAULT_SOURCE@ toggle" &
+VOLUMEUP /bin/pa-volume-control.sh speaker +5% &
+VOLUMEDOWN /bin/pa-volume-control.sh speaker -5% &
+MUTE /bin/pa-volume-control.sh speaker toggle &
+MICMUTE /bin/pa-volume-control.sh mic toggle &
+LEFTALT+KPPLUS /bin/pa-volume-control.sh speaker +5% &
+RIGHTALT+KPPLUS /bin/pa-volume-control.sh speaker +5% &
+LEFTALT+KPMINUS /bin/pa-volume-control.sh speaker -5% &
+RIGHTALT+KPMINUS /bin/pa-volume-control.sh speaker -5% &
+LEFTALT+KPASTERISK /bin/pa-volume-control.sh speaker toggle &
+RIGHTALT+KPASTERISK /bin/pa-volume-control.sh speaker toggle &
+LEFTSHIFT+KPPLUS /bin/pa-volume-control.sh mic +5% &
+RIGHTSHIFT+KPPLUS /bin/pa-volume-control.sh mic +5% &
+LEFTSHIFT+KPMINUS /bin/pa-volume-control.sh mic -5% &
+RIGHTSHIFT+KPMINUS /bin/pa-volume-control.sh mic -5% &
+LEFTSHIFT+KPASTERISK /bin/pa-volume-control.sh mic toggle &
+RIGHTSHIFT+KPASTERISK /bin/pa-volume-control.sh mic toggle &
