add new xkb-switch buildroot package to query the currently active X11 keyboard layout and display it if SCROLLLOCK is pressed which should now trigger hotkeyd to execute a display-kblayout.sh script showing an OSD.

--- a/buildroot-external/rootfs-overlay/etc/hotkeyd.conf
+++ b/buildroot-external/rootfs-overlay/etc/hotkeyd.conf
@@ -22,6 +22,9 @@ RIGHTALT+F10 /bin/umounter.sh &
 LEFTALT+FN+F10 /bin/umounter.sh &
 RIGHTALT+FN+F10 /bin/umounter.sh &
 
+# scrolllock keyboard language OSD
+SCROLLLOCK /bin/display-kblayout.sh &
+
 # SUN keyboard settings
 COPY /bin/su - truser -c "DISPLAY=:0.0 /bin/xdotool keydown Control_L key Insert keyup Control_L" &
 PASTE /bin/su - truser -c "DISPLAY=:0.0 /bin/xdotool keydown Shift_L key Insert keyup Shift_L" &
