--- a/buildroot-external/Config.in
+++ b/buildroot-external/Config.in
@@ -17,4 +17,5 @@ menu "Additional software"
   source "$BR2_EXTERNAL_THINROOT_PATH/package/multilib32/Config.in"
   source "$BR2_EXTERNAL_THINROOT_PATH/package/yoe-kiosk-browser/Config.in"
   source "$BR2_EXTERNAL_THINROOT_PATH/package/xosd/Config.in"
+  source "$BR2_EXTERNAL_THINROOT_PATH/package/xkb-switch/Config.in"
 endmenu
