--- a/buildroot-external/board/generic-x86_64/kernel.config
+++ b/buildroot-external/board/generic-x86_64/kernel.config
@@ -172,6 +172,9 @@ CONFIG_SPI_DLN2=m
 CONFIG_GPIO_DLN2=m
 CONFIG_MFD_DLN2=m
 
+# Required for some PCIe devices such as ath12k
+CONFIG_IRQ_REMAP=y
+
 CONFIG_HW_RANDOM_AMD=y
 CONFIG_HW_RANDOM_INTEL=y
 CONFIG_HW_RANDOM_TPM=y
