--- a/buildroot-external/configs/generic-x86_64.config
+++ b/buildroot-external/configs/generic-x86_64.config
@@ -25,6 +25,9 @@ BR2_PACKAGE_LINUX_FIRMWARE_IWLWIFI_8265=y
 BR2_PACKAGE_LINUX_FIRMWARE_IWLWIFI_9XXX=y
 BR2_PACKAGE_LINUX_FIRMWARE_IWLWIFI_QUZ=y
 BR2_PACKAGE_LINUX_FIRMWARE_RTL_8169=y
+BR2_PACKAGE_LINUX_FIRMWARE_AMD_UCODE=y
+BR2_PACKAGE_INTEL_MICROCODE=y
+BR2_PACKAGE_INTEL_MICROCODE_INSTALL_TARGET=y
 BR2_PACKAGE_LIBDRM_RADEON=y
 BR2_PACKAGE_LIBDRM_AMDGPU=y
 BR2_PACKAGE_BLUEZ5_UTILS=y
