--- a/buildroot-external/kernel/6.12/global.config
+++ b/buildroot-external/kernel/6.12/global.config
@@ -380,3 +380,6 @@ CONFIG_ACPI_APEI_GHES=y
 # enable firmware compression
 CONFIG_FW_LOADER_COMPRESS=y
 CONFIG_FW_LOADER_COMPRESS_ZSTD=y
+
+# enable USER_NS
+CONFIG_USER_NS=y
