--- a/buildroot-external/rootfs-overlay/etc/X11/xorg.conf.d/20-intel.conf
+++ b/buildroot-external/rootfs-overlay/etc/X11/xorg.conf.d/20-intel.conf
@@ -1,6 +1,5 @@
 Section "Device"
-        Identifier "Intel Graphics"
-        Driver "intel"
-        Option "AccelMethod" "sna"
-        Option "DRI" "iris"
+    Identifier  "Intel Graphics"
+    Driver      "intel"
+    Option      "DRI" "3"
 EndSection
