switch from obsolete SWRAST to LLVMPIPE, enable PIPEWIRE package support and also add two X11 debug packages for being able to debug potential GLX support issues.

--- a/buildroot-external/Buildroot.config
+++ b/buildroot-external/Buildroot.config
@@ -53,7 +53,7 @@ BR2_PACKAGE_LIBERATION=y
 BR2_PACKAGE_LIBDRM=y
 BR2_PACKAGE_MESA3D=y
 BR2_PACKAGE_MESA3D_LLVM=y
-BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_SWRAST=y
+BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_LLVMPIPE=y
 BR2_PACKAGE_MESA3D_OPENGL_GLX=y
 BR2_PACKAGE_MESA3D_OPENGL_EGL=y
 BR2_PACKAGE_MESA3D_OPENGL_ES=y
@@ -109,3 +109,8 @@ BR2_PACKAGE_NUMLOCKX=y
 BR2_PACKAGE_XPRINTIDLE=y
 BR2_PACKAGE_XOSD=y
 BR2_PACKAGE_XKB_SWITCH=y
+BR2_PACKAGE_PIPEWIRE=y
+
+# X11 debug
+BR2_PACKAGE_XAPP_XDPYINFO=y
+BR2_PACKAGE_MESA3D_DEMOS=y
