reworked X11 xorg config to better fit general config styles. retired old/obsolete options. In addition switched from evdev/snypatics input devices uses to general and more modern libinput.

--- a/buildroot-external/rootfs-overlay/etc/X11/xorg.conf.d/12-screen.conf
+++ b/buildroot-external/rootfs-overlay/etc/X11/xorg.conf.d/12-screen.conf
@@ -1,33 +1,5 @@
 Section "Screen"
-	Identifier "Screen0"
-	Device     "Card0"
-	Monitor    "Monitor0"
-	SubSection "Display"
-		Viewport   0 0
-		Depth     1
-	EndSubSection
-	SubSection "Display"
-		Viewport   0 0
-		Depth     4
-	EndSubSection
-	SubSection "Display"
-		Viewport   0 0
-		Depth     8
-	EndSubSection
-	SubSection "Display"
-		Viewport   0 0
-		Depth     15
-	EndSubSection
-	SubSection "Display"
-		Viewport   0 0
-		Depth     16
-	EndSubSection
-	SubSection "Display"
-		Viewport   0 0
-		Depth     24
-	EndSubSection
-	SubSection "Display"
-		Viewport   0 0
-		Depth     32
-	EndSubSection
+    Identifier "Screen0"
+    Device     "Intel Graphics"
+    DefaultDepth 24
 EndSection
