--- a/buildroot-external/rootfs-overlay/etc/X11/xorg.conf.d/00-modules.conf
+++ b/buildroot-external/rootfs-overlay/etc/X11/xorg.conf.d/00-modules.conf
@@ -1,12 +1,4 @@
 Section "Module"
-  Load "fb"
-  Load "fbdevhw"
-  Load "wfb"
-  Load "int10"
-  Load "vbe"
-  Load "vgahw"
-  Load "shadow"
-  Load "shadowfb"
-  Load "exa"
+  Load "glx"
   Load "glamoregl"
 EndSection
