--- a/buildroot-external/rootfs-overlay/etc/X11/xorg.conf.d/90-input.conf
+++ b/buildroot-external/rootfs-overlay/etc/X11/xorg.conf.d/90-input.conf
@@ -1,6 +1,4 @@
 Section "ServerFlags"
-	Option "AutoAddDevices" "true"
-	Option "AutoEnableDevices" "true"
-	Option "AllowEmptyInput" "true"
-	Option "IgnoreABI" "true"
+    # Useful for headless/late-attached input devices.
+    Option "AllowEmptyInput" "true"
 EndSection
