disable X11 debugging options

--- a/buildroot-external/Buildroot.config
+++ b/buildroot-external/Buildroot.config
@@ -109,5 +109,5 @@ BR2_PACKAGE_XKB_SWITCH=y
 BR2_PACKAGE_PIPEWIRE=y
 
 # X11 debug
-BR2_PACKAGE_XAPP_XDPYINFO=y
-BR2_PACKAGE_MESA3D_DEMOS=y
+#BR2_PACKAGE_XAPP_XDPYINFO=y
+#BR2_PACKAGE_MESA3D_DEMOS=y
