--- a/buildroot-external/Buildroot.config
+++ b/buildroot-external/Buildroot.config
@@ -64,6 +64,7 @@ BR2_PACKAGE_XORG7=y
 BR2_PACKAGE_XSERVER_XORG_SERVER=y
 BR2_PACKAGE_XLIB_LIBXAW=y
 BR2_PACKAGE_XLIB_LIBXV=y
+BR2_PACKAGE_XAPP_XCOMPMGR=y
 BR2_PACKAGE_XAPP_XPROP=y
 BR2_PACKAGE_XAPP_XRANDR=y
 BR2_PACKAGE_XAPP_XSETROOT=y
