added new setrootpix buildroot package to compile and integrate a 'setrootpix' utility which can be used instead of xsetroot to set the X11 backrgound in a solid-color using a 1x1 pixmap tiled by the X server. This is done in a way that a potential X11 compositor (e.g. xcompmgr) will take care to keep the background color intact (which xsetroot does not seem to allow).

--- a/buildroot-external/Buildroot.config
+++ b/buildroot-external/Buildroot.config
@@ -108,6 +108,7 @@ BR2_PACKAGE_XPRINTIDLE=y
 BR2_PACKAGE_XOSD=y
 BR2_PACKAGE_XKB_SWITCH=y
 BR2_PACKAGE_PIPEWIRE=y
+BR2_PACKAGE_SETROOTPIX=y
 
 # X11 debug
 #BR2_PACKAGE_XAPP_XDPYINFO=y
