--- a/buildroot-external/Config.in
+++ b/buildroot-external/Config.in
@@ -18,4 +18,5 @@ menu "Additional software"
   source "$BR2_EXTERNAL_THINROOT_PATH/package/yoe-kiosk-browser/Config.in"
   source "$BR2_EXTERNAL_THINROOT_PATH/package/xosd/Config.in"
   source "$BR2_EXTERNAL_THINROOT_PATH/package/xkb-switch/Config.in"
+  source "$BR2_EXTERNAL_THINROOT_PATH/package/setrootpix/Config.in"
 endmenu
