first experimental changes to get a minimal xfwm4 window manager setup rather than using openbox which might be quite limited for broader use cases.

--- a/buildroot-external/configs/generic-x86_64.config
+++ b/buildroot-external/configs/generic-x86_64.config
@@ -65,3 +65,10 @@ BR2_PACKAGE_WEBKITGTK_MINIBROWSER=y
 #BR2_PACKAGE_QT5MULTIMEDIA=y
 #BR2_PACKAGE_QT5DECLARATIVE=y
 #BR2_PACKAGE_QT_WEBKIT_KIOSK=y
+
+BR2_PACKAGE_LIBXFCE4UTIL=y
+BR2_PACKAGE_XFCONF=y
+BR2_PACKAGE_LIBXFCE4UI=y
+BR2_PACKAGE_LIBWNCK=y
+BR2_PACKAGE_XFWM4=y
+BR2_PACKAGE_XFWM4_COMPOSITOR=y
