added new thinlinc-nightly package to be able to test out or use nightly snapshots of the latest thinlinc client before it has been released.

--- a/buildroot-external/Config.in
+++ b/buildroot-external/Config.in
@@ -4,6 +4,7 @@ source "$BR2_EXTERNAL_THINROOT_PATH/Config.ext.in"
 menu "Additional software"
   source "$BR2_EXTERNAL_THINROOT_PATH/package/qutselect/Config.in"
   source "$BR2_EXTERNAL_THINROOT_PATH/package/thinlinc/Config.in"
+  source "$BR2_EXTERNAL_THINROOT_PATH/package/thinlinc-nightly/Config.in"
   source "$BR2_EXTERNAL_THINROOT_PATH/package/hotkeyd/Config.in"
   source "$BR2_EXTERNAL_THINROOT_PATH/package/numlockx/Config.in"
   source "$BR2_EXTERNAL_THINROOT_PATH/package/xprintidle/Config.in"
